--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "semantic-ui": "^2.1.4",
     "serve-favicon": "~2.3.0",
     "thinky": "^2.1.9",
+    "underscore": "^1.8.3",
     "yamljs": "^0.2.4"
   }
 }
