--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "del": "^2.0.2",
     "ejs": "^2.3.4",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
     "extend": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
@@ -43,6 +44,7 @@
     "moment-timezone": "^0.4.1",
     "morgan": "~1.6.1",
     "passwordless": "^1.1.0",
+    "passwordless-rethinkdbstore": "^1.0.2",
     "pusher": "^1.0.6",
     "request": "^2.65.0",
     "require-dot-file": "^0.4.0",
